Lection 7: homework